tests/ui/enum_ext_on_struct.stderr
error: enum_ext only works on enums
 --> tests/ui/enum_ext_on_struct.rs:3:1
  |
3 | / enum_ext!(
4 | |     pub struct NotAnEnum {
5 | |         x: i32,
6 | |     }
7 | | );
  | |_^
  |
  = note: this error originates in the macro `enum_ext` (in Nightly builds, run with -Z macro-backtrace for more info)
