tests/ui/enum_ext_on_struct.rs
use enum_ext::enum_ext;

enum_ext!(
    pub struct NotAnEnum {
        x: i32,
    }
);

fn main() {}
